tests/negative/neg_while_variant_mutable_bound.safe
-- Test: neg_while_variant_mutable_bound
-- Description: Mutable right-side countdown bounds stay outside automatic Loop_Variant derivation.
-- Expected: REJECT loop_variant_not_derivable

package neg_while_variant_mutable_bound

   function countdown returns integer
      var lower_bound : integer = 1
      var index : integer = 3

      while index >= lower_bound
         index = index - 1

      return index
